[metadata]
name = optimal_affine
author = Yael Balbastre
author_email = yael.balbastre@gmail.com
description = Build optimal "subject to mean space" affines from "subject to subject" pairwise affines
long_description = file:README.md
platforms = OS Independent
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps.
project_urls =
    Source Code=https://github.com/balbasty/optimal_affine

[options]
python_requires = >= 3.7
install_requires = numpy

[options.entry_points]
console_scripts =
    optimal_affine = optimal_affine.api:cli

